# wx-js-sdk

./: .gitignore  Cargo.toml  wx-jsapi.js
demo-app/: Cargo.toml  Trunk.toml  index.html  wx-jsapi.js
demo-app/src/: main.rs
wx-js-sdk/: Cargo.toml
wx-js-sdk/src/: lib.rs
