[package]
name = "demo-app"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
gloo-console = "0.3.0"
gloo-net = { version = "0.6.0", default-features = false, features = ["json", "http"] }
js-sys = "0.3.77"
serde = "1.0.217"
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.138"
snafu = "0.8.5"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = ["Location", "Window", "console", "Element", "Node"] }
wx-js-sdk = { version = "0.1.0", path = "../wx-js-sdk" }
