[package]
name = "wx-js-sdk"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
serde = { version = "1.0.202", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
snafu = "0.8.2"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
gloo-net = { version = "0.5.0", default-features = false, features = ["json", "http"] }
web-sys = { version = "0.3.69", features = ["Location", "Window"] }
js-sys = "0.3.69"
linear-map = { version = "1.2.0", features = ["serde_impl"] }
